# ffmpeg-live-transcode

./: CMakeLists.txt
src/: remuxing_test.cpp
src/demuxing/: demuxing.cpp  demuxing.h  input.cpp
src/remuxing/: output.cpp  output.h  remuxing.cpp  remuxing.h  vp9.cpp
src/util/: common.cpp  common.h  frame_queue.cpp  frame_queue.h
